add debugger launch script in Makefile

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -7,9 +7,14 @@ STUBHDRS=gdbstub/gdbstub.h
 STUBOBJS=$(STUBSRCS:.c=.o)
 CFLAGS=-O3 -Wall -I./
 LDLIBS=-lm -lpthread
+RVPATH?=~/llvm-riscv/bin
+PROGRAM?=../../ladybird_xv6/kernel/kernel
+DISK?=../../ladybird_xv6/fs.img
+PORT=12345
 
-.PHONY: all clean xv6
+.PHONY: all clean xv6 run_rspsim run_lldb
 .INTERMEDIATE: $(OBJS) $(TARGET).o
+.SILENT: run_rspsim run_lldb
 
 all: $(TARGET)
 
@@ -25,6 +30,12 @@ xv6: $(TARGET)
 $(TARGET).o: sim.h
 
 $(OBJS): $(HDRS)
+
+run_rspsim: rspsim
+	./rspsim $(PROGRAM) $(DISK)
+
+run_lldb:
+	$(RVPATH)/lldb $(PROGRAM) -o 'process connect connect://localhost:$(PORT)'
 
 clean:
 	$(RM) $(TARGET) rspsim
