update kernel makefile

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,18 +1,18 @@
-TOOLPREFIX = ${HOME}/llvm-riscv/bin/
-CC = ${TOOLPREFIX}clang
-AS = ${TOOLPREFIX}clang -c
-AR = ${TOOLPREFIX}llvm-ar
-LD = ${TOOLPREFIX}ld.lld
-OBJCOPY = ${TOOLPREFIX}llvm-objcopy
-OBJDUMP = ${TOOLPREFIX}llvm-objdump
+TOOLPREFIX=$(HOME)/llvm-riscv/bin/
+CC=$(TOOLPREFIX)clang
+AS=$(TOOLPREFIX)clang -c
+AR=$(TOOLPREFIX)llvm-ar
+LD=$(TOOLPREFIX)ld.lld
+OBJCOPY=$(TOOLPREFIX)llvm-objcopy
+OBJDUMP=$(TOOLPREFIX)llvm-objdump
 
-ASFLAGS = -nodefaultlibs -O3 -g -static -I. -march=rv32imaf -mabi=ilp32f
-CFLAGS += $(ASFLAGS) -fno-builtin
-LDFLAGS = -nodefaultlibs -T ladybird.ld -L./ -z nognustack
-ARFLAGS = rcs
+ASFLAGS=-nodefaultlibs -O3 -g -static --target=riscv32 -march=rv32imaf -mabi=ilp32f
+CFLAGS+=$(ASFLAGS) -fno-builtin -I.
+LDFLAGS+=$(ASFLAGS) -T ladybird.ld -L./ -z nognustack
+ARFLAGS=rcs
 
-TARGET ?= hello
-TARGET_OBJDUMP = ${TARGET:=.objdump}
+TARGET?=hello
+TARGET_OBJDUMP=$(TARGET:=.objdump)
 
 .PHONY: all clean
 
