--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,41 +1,44 @@
-TARGET=launch_sim
 SRCS=elfloader.c sim.c memory.c csr.c mmio.c plic.c
 HDRS=sim.h memory.h elfloader.h csr.h mmio.h plic.h
 OBJS=$(SRCS:.c=.o)
+POBJS=launch_sim.o gdb_stub_sys.o
 STUBSRCS=gdbstub/gdbstub.c
 STUBHDRS=gdbstub/gdbstub.h
 STUBOBJS=$(STUBSRCS:.c=.o)
 CFLAGS=-O3 -Wall -I./
 LDLIBS=-lm -lpthread
 RVPATH?=~/llvm-riscv/bin
-PROGRAM?=../../ladybird_xv6/kernel/kernel
-DISK?=../../ladybird_xv6/fs.img
+XV6KRNL=../../ladybird_xv6/kernel/kernel
+XV6DISK=../../ladybird_xv6/fs.img
+KRNL?=$(XV6KRNL)
+DISK?=$(XV6DISK)
 PORT=12345
+COMMANDS?=
 
 .PHONY: all clean xv6 run_rspsim run_lldb
-.INTERMEDIATE: $(OBJS) $(TARGET).o
+.INTERMEDIATE: $(OBJS) $(POBJS)
 .SILENT: run_rspsim run_lldb
 
-all: $(TARGET)
+all: launch_sim rspsim
 
-$(TARGET): $(OBJS) $(TARGET).o
-	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJS) $(TARGET).o -o $(TARGET) $(LDLIBS)
+launch_sim: $(OBJS) launch_sim.o
+	$(CC) $(CFLAGS) $(LDFLAGS) $^ -o $@ $(LDLIBS)
 
 rspsim: $(OBJS) $(STUBOBJS) gdbstub_sys.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ -o $@ $(LDLIBS)
 
-xv6: $(TARGET)
-	./$(TARGET) ../img/kernel ../img/fs.img
+xv6: launch_sim
+	./$^ $(XV6KRNL) $(XV6DISK) $(COMMANDS)
 
-$(TARGET).o: sim.h
+$(POJBS): sim.h
 
 $(OBJS): $(HDRS)
 
 run_rspsim: rspsim
-	./rspsim $(PROGRAM) $(DISK)
+	./rspsim $(KRNL) $(DISK) $(COMMANDS)
 
 run_lldb:
-	$(RVPATH)/lldb $(PROGRAM) -o 'process connect connect://localhost:$(PORT)'
+	$(RVPATH)/lldb $(KRNL) -o 'process connect connect://localhost:$(PORT)'
 
 clean:
-	$(RM) $(TARGET) rspsim
+	$(RM) launch_sim rspsim
