--- a/sim/ladybird.dts
+++ b/sim/ladybird.dts
@@ -3,38 +3,41 @@
   #address-cells = <1>;
   #size-cells = <1>;
 
-	cpus {
+  cpus {
     #address-cells = <1>;
     #size-cells = <0>;
     cpu0: cpu@0 {
-			device_type = "cpu";
-			clock-frequency = <100000000>;
-			i-cache-size = <32768>;
-			d-cache-size = <32768>;
-			mmu-type = "riscv,sv32";
-			reg = <0>;
-			riscv,isa = "rv32imac";
-			status = "okay";
+      device_type = "cpu";
+      clock-frequency = <100000000>;
+      i-cache-size = <32768>;
+      d-cache-size = <32768>;
+      mmu-type = "riscv,sv32";
+      reg = <0>;
+      riscv,isa = "rv32imac";
+      status = "okay";
       cpu0_intc: interrupt-controller {
         #interrupt-cells = <1>;
         compatible = "riscv,cpu-intc";
         interrupt-controller;
       };
-		};
-	};
+    };
+  };
 
-	memory@80000000 {
-		/* Bank 0: 4 MB, Bank 1: 2 MB, AI chip SRAM: 2MB */
-		device_type = "memory";
-		reg = <0x80000000 0x80000000>;
-	};
+  memory@80000000 {
+    device_type = "memory";
+    reg = <0x80000000 0x80000000>;
+  };
 
- plic0: interrupt-controller@C000000 {
+  plic0: interrupt-controller@C000000 {
     #interrupt-cells = <1>;
-		compatible = "riscv,plic0";
-		interrupt-controller;
-		interrupts-extended =
-			<&cpu0_intc 11 &cpu0_intc 9>;
-		reg = <0x0 0xc000000 0x0 0x4000000>;
-	};
- };
+    compatible = "riscv,plic0";
+    interrupt-controller;
+    interrupts-extended =
+      <&cpu0_intc 11 &cpu0_intc 9>;
+    reg = <0x0 0xc000000 0x0 0x4000000>;
+  };
+
+  htif {
+    compatible = "ucb,htif0";
+  };
+};
