--- a/sim/Makefile
+++ b/sim/Makefile
@@ -15,6 +15,9 @@ DISK?=$(XV6DISK)
 PORT?=12345
 PROFILE=0
 COMMANDS?=
+TOHOST_ADDR?=0x80001000
+FROMHOST_ADDR?=0x80001040
+CFLAGS+=-DTOHOST_ADDR=$(TOHOST_ADDR) -DFROMHOST_ADDR=$(FROMHOST_ADDR)
 
 ifeq ($(PROFILE),1)
 	CFLAGS+=-pg
