[sim] add riscv compatible to CPU in dts

--- a/sim/ladybird.dts
+++ b/sim/ladybird.dts
@@ -13,6 +13,7 @@
       device_type = "cpu";
       i-cache-size = <32768>;
       d-cache-size = <32768>;
+      compatible = "riscv";
       mmu-type = "riscv,sv32";
       clock-frequency = <100000000>;
       reg = <0>;
