[benchmark] add histogram graph scripts

--- a/sim/eval/Makefile
+++ b/sim/eval/Makefile
@@ -1,5 +1,7 @@
 .PHONY: all clean
 
+TARGET?=mm
+
 all: read_skip.png write_skip.png
 
 read_skip.png: read_skip.dat
@@ -13,6 +15,12 @@ write_skip.png: write_skip.dat
 
 write_skip.dat:
 	./mkwrite_skip.sh > $@
+
+histograms:
+#	./extract.sh
+	gnuplot -e "benchname='$(TARGET)'" -c histogram_producer_overwriter.plt
+	gnuplot -e "benchname='$(TARGET)'" -c histogram_producer_consumer.plt
+	gnuplot -e "benchname='$(TARGET)'" -c histogram_use.plt
 
 clean:
 	$(RM) *.dat *.png
