[tb] add riscv disassembler helper

--- a/tb/Makefile
+++ b/tb/Makefile
@@ -7,7 +7,7 @@ ELF=./hello.riscv
 .PHONY: all clean
 
 all:
-	verilator -Wall -DSIMULATION --cc --exe $(TOP).cpp -I../src $(PACKAGES) $(INTERFACE) --trace --top-module $(TOP) $(TOP).sv
+	verilator -Wall -DLADYBIRD_SIMULATION --cc --exe $(TOP).cpp -I../src $(PACKAGES) $(INTERFACE) --trace --top-module $(TOP) $(TOP).sv
 	cd obj_dir; make -j --silent -f V$(TOP).mk V$(TOP)
 	cd obj_dir; ./V$(TOP) ../$(ELF)
 
