[tb] update testbench

--- a/tb/Makefile
+++ b/tb/Makefile
@@ -1,15 +1,17 @@
 PACKAGES=ladybird_config.svh ladybird_riscv_helper.svh
-INTERFACE=
+INTERFACE=ladybird_axi_interface
 TOP=ladybird_tb
 OBJDIR=build
 ELF=./hello.riscv
+VDEF=-DLADYBIRD_SIMULATION
+TIMEOUT?=10000000
 
 .PHONY: all clean
 
 all:
-	verilator -Wall -DLADYBIRD_SIMULATION --cc --exe $(TOP).cpp -I../src $(PACKAGES) $(INTERFACE) --trace --top-module $(TOP) $(TOP).sv
+	verilator -Wall $(VDEF) --timing --cc --exe $(TOP).cpp -I../src $(PACKAGES) $(INTERFACE) --trace --top-module $(TOP) $(TOP).sv
 	cd obj_dir; make -j --silent -f V$(TOP).mk V$(TOP)
-	cd obj_dir; ./V$(TOP) ../$(ELF)
+	cd obj_dir; ./V$(TOP) ../$(ELF) $(TIMEOUT)
 
 clean:
-	$(RM) obj_dir
+	$(RM) -rf obj_dir
