[feature] HTIF impl. in memory model

--- a/tb/Makefile
+++ b/tb/Makefile
@@ -3,7 +3,7 @@ INTERFACE=ladybird_axi_interface
 TOP=ladybird_tb
 OBJDIR=build
 ELF=./hello.riscv
-VDEF=-DLADYBIRD_SIMULATION -DLADYBIRD_SIMULATION_DEBUG_UNTOUCHED_MEM
+VDEF=-DLADYBIRD_SIMULATION -DLADYBIRD_SIMULATION_DEBUG_UNTOUCHED_MEM -DLADYBIRD_SIMULATION_HTIF
 # VDEF+=-DLADYBIRD_SIMULATION_DEBUG_DUMP
 TIMEOUT?=10000000
 WAVE?=0
