[update] tb Makefile

--- a/tb/Makefile
+++ b/tb/Makefile
@@ -3,8 +3,9 @@ INTERFACE=ladybird_axi_interface
 TOP=ladybird_tb
 OBJDIR=build
 ELF=./hello.riscv
-VDEF=-DLADYBIRD_SIMULATION -DLADYBIRD_SIMULATION_DEBUG_UNTOUCHED_MEM -DLADYBIRD_SIMULATION_HTIF
+VDEF=-DLADYBIRD_SIMULATION -DLADYBIRD_SIMULATION_HTIF
 # VDEF+=-DLADYBIRD_SIMULATION_DEBUG_DUMP
+# VDEL+=-DLADYBIRD_SIMULATION_DEBUG_UNTOUCHED_MEM
 TIMEOUT?=10000000
 WAVE?=0
 
