--- a/tb/Makefile
+++ b/tb/Makefile
@@ -4,7 +4,7 @@ TOP=ladybird_tb
 OBJDIR=build
 ELF=./hello.riscv
 VDEF=-DLADYBIRD_SIMULATION -DLADYBIRD_SIMULATION_HTIF
-# VDEF+=-DLADYBIRD_SIMULATION_DEBUG_DUMP
+VDEF+=-DLADYBIRD_SIMULATION_DEBUG_DUMP
 # VDEL+=-DLADYBIRD_SIMULATION_DEBUG_UNTOUCHED_MEM
 TIMEOUT?=10000000
 WAVE?=0
